# elliptic

./: Cargo.toml  README.md
paper/: bibliography.bib  coursework.tex  title.tex
src/: algo.rs  attack.rs  bytes.rs  curve.rs  dlies.rs  ecges.rs  ecies.rs  fin.rs  group.rs  inv.rs  main.rs  poly.rs  ring.rs  traits.rs  zn.rs
src/algebra/: algo.rs  curve.rs  mod.rs  poly.rs  traits.rs  zp.rs
src/algebra/fields/: mod.rs  poly.rs  zn.rs
src/algo/: char.rs  extended_gcd.rs  inverse.rs  mod.rs
src/encryption/: mod.rs
src/encryption/base/: encapsulation.rs  encryption.rs  hybrid.rs  mod.rs  schemes.rs  streaming.rs  string_encryption.rs  stringer.rs  vectorized.rs
src/encryption/extensions/: hybrid.rs  mod.rs  object.rs  stringer.rs  vectorized.rs
src/encryption/flavours/: el_gamal.rs  el_gamal_kem.rs  mod.rs
src/fields/: poly.rs  zn.rs
src/poly/: mod.rs  monome.rs
src/traits/: div_rem.rs  mod.rs
