[package]
name = "elliptic"
version = "0.1.0"
authors = ["TurtlePU <sokolov.p64@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
itertools = "0.10.0"
num-bigint = { version = "0.4.0", features = ["rand"] }
num-traits = "0.2.14"
rand = "0.8.3"
thiserror = "1.0.24"
